--- a/iisacc/index.html
+++ b/iisacc/index.html
@@ -6,10 +6,14 @@
 	<title>Document</title>
 	<script src="index.js"></script>
 	<link rel="stylesheet" href="global.css">
+	<link rel="stylesheet" href="resource/font/pretendard.css">
 </head>
 <body>
-	<div class="TitleHeader">
+	<div class="HeaderTitle">
 		<h1 class="HeaderTitle">IISACC</h1>
+	</div>
+	<div class="VStak">
+		<p>data</p>	
 	</div>
 </body>
 </html>
