--- a/iisacc/index.html
+++ b/iisacc/index.html
@@ -13,7 +13,24 @@
 		<h1 class="HeaderTitle">IISACC</h1>
 	</div>
 	<div class="VStak">
-		<p>data</p>	
+		<div class="HomeSectionContetnsBar recent">
+			<h2>Recent</h2>
+			<div class="content-box">
+				<p>Recent</p>
+			</div>
+		</div>
+		<div class="HomeSectionContetnsBar post">
+			<h2>Post</h2>
+			<div class="content-box">
+				<p>Posts</p>
+			</div>
+		</div>
+		<div class="HomeSectionContetnsBar info">
+			<h2>Info</h2>
+			<div class="content-box">
+				<p>Information</p>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
