--- a/iisacc/index.html
+++ b/iisacc/index.html
@@ -1,36 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-	<script src="index.js"></script>
-	<link rel="stylesheet" href="global.css">
-	<link rel="stylesheet" href="resource/font/pretendard.css">
-</head>
-<body>
-	<div class="HeaderTitle">
-		<h1 class="HeaderTitle">IISACC</h1>
-	</div>
-	<div class="VStak">
-		<div class="HomeSectionContetnsBar recent">
-			<h2>Recent</h2>
-			<div class="content-box">
-				<p>Recent</p>
-			</div>
-		</div>
-		<div class="HomeSectionContetnsBar post">
-			<h2>Post</h2>
-			<div class="content-box">
-				<p>Posts</p>
-			</div>
-		</div>
-		<div class="HomeSectionContetnsBar info">
-			<h2>Info</h2>
-			<div class="content-box">
-				<p>Information</p>
-			</div>
-		</div>
-	</div>
-</body>
-</html>
+<html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>IISACC</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="./main.js"></script>
+  </body>
+</html> 
