--- a/iisacc/index.html
+++ b/iisacc/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>IISACC</title>
+    <link rel="stylesheet" href="./global.css">
+    <link rel="stylesheet" href="./resource/font/pretendard.css">
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="./main.js"></script>
   </body>
-</html> 
+</html>
