--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="/global.css">
 		<link rel="stylesheet" href="/font/pretendard.css">
+		<link rel="alternate" type="application/rss+xml" title="RSS Feed" href="/static/rss.xml" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
